fixed overflow issue on album show info grid

--- a/frontend/src/components/AlbumShowPage/AlbumShow.css
+++ b/frontend/src/components/AlbumShowPage/AlbumShow.css
@@ -444,7 +444,7 @@
     display: -webkit-box;
     white-space: unset;
     word-break: break-all;
-    overflow: hidden;
+    /* overflow: hidden; */
     text-overflow: ellipsis;
     white-space: nowrap;
 }
